update layout intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">projectbaru</string>
+    <string name="Diana1" />
+    <string name="Diana2" />
+    <string name="Diana3" />
+    <string name="Diana4" />
+    <string name="Diana5" />
+    <string name="Diana6" />
 </resources>
